--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ cache/
 out/
 
 # Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
+broadcast/**/5042002/
 
 # Docs
 docs/
