--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,23 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.28"
+
+# Optimizer settings (match Hardhat config)
+optimizer = true
+optimizer_runs = 200
+
+# OpenZeppelin remappings
+remappings = [
+    "@openzeppelin/=lib/openzeppelin-contracts/"
+]
+
+# Arc Testnet RPC
+[rpc_endpoints]
+arc_testnet = "https://rpc.testnet.arc.network"
+
+# Arc Testnet Explorer (for contract verification)
+[etherscan]
+arc_testnet = { key = "${ARCSCAN_API_KEY}", chain = 5042002, url = "https://testnet.arcscan.app/api" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
